--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Color Picker</title>
-    <link rel="stylesheet" href="style.css">  
-    
+    <title>Palindrome checker</title>
 </head>
 <body>
-    <h1>Color Picker</h1>
-    <button id="redBtn" onclick="setcolor('red')">Red</button>
-    <button id="greenBtn"onclick="setcolor('green')">Green</button>
-    <button id="blueBtn"onclick="setcolor('blue')">Blue</button>
-    <button id="randomBtn"onclick="randomColor()">Random</button>
-    <script src="index.js"></script>
+ <h1>Palindrome Checker</h1>  
+ <input type="text" id="textfield" placeholder="Enter a string bro"/>
+ <br />
+ <br />
+ <button onclick="checkPalindrome()">Check Palindrome</button> 
+ 
+ <script src="index.js"></script>
 </body>
 </html>
